<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="0dp"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Fill Project Details"
        android:textColor="@color/app_primary"
        android:textSize="30sp"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/hint_project_name"
        android:inputType="textPersonName"
        android:text=""
        android:id="@+id/project_name"
        android:textColor="@color/text_dark"
        android:textSize="30sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/hint_project_description"
        android:inputType="textPersonName"
        android:text=""
        android:id="@+id/project_desc"
        android:textColor="@color/text_dark"
        android:textSize="30sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/hint_project_tenure"
        android:inputType="number"
        android:text=""
        android:id="@+id/project_tenure"
        android:textColor="@color/text_dark"
        android:textSize="30sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/hint_project_technologies"
        android:inputType="text"
        android:text=""
        android:id="@+id/project_tech"
        android:textColor="@color/text_dark"
        android:textSize="30sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_project_technologies_note"
        android:textSize="12sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/hint_project_members"
        android:inputType="number"
        android:text=""
        android:id="@+id/project_members"
        android:textColor="@color/text_dark"
        android:textSize="30sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/hint_project_role"
        android:inputType="textPersonName"
        android:text=""
        android:id="@+id/project_role"
        android:textColor="@color/text_dark"
        android:textSize="30sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/hint_project_url"
        android:inputType="textPersonName"
        android:text=""
        android:id="@+id/project_url"
        android:textColor="@color/text_dark"
        android:textSize="30sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_project_url_note"
        android:textSize="12sp"/>
    <View
        android:layout_width="0dp"
        android:layout_height="10dp" />
    <Button
        android:id="@+id/create_project_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/createproject_button"
        android:textSize="14sp"
        android:textColor="@color/text_light"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:background="@color/app_primary"
        />

</LinearLayout>
</ScrollView>