<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/text_light"
    android:gravity="center">

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SignUp"
                        android:textColor="@color/text_dark"
                        android:textSize="30sp"
                        />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_company_name"
                        android:id="@+id/company_name"
                        android:gravity="start"
                        />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/company_email"
                        android:hint="@string/hint_company_email"
                        android:layout_gravity="center_horizontal" />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:hint="@string/hint_company_pwd"
                        android:id="@+id/company_pwd"
                        android:layout_gravity="center_horizontal" />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/hint_company_cnfpwd"
                        android:id="@+id/company_cnfpwd"
                        android:gravity="start"
                        />

                    <!--<EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_company_contactno"
                        android:id="@+id/company_contactno"
                        android:gravity="start"
                        />-->

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:hint="@string/hint_company_contactno"
                        android:id="@+id/company_contactno"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:id="@+id/company_sign_up"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/signup_button"
                        android:textSize="14sp"
                        android:textColor="@color/text_dark"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button_boarder"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SignUp"
                        android:textColor="@color/text_dark"
                        android:textSize="30sp"
                        />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/hint_candidate_name"
                        android:id="@+id/candidate_name"
                        android:gravity="left"
                        />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_candidate_email"
                        android:id="@+id/candidate_email"
                        android:gravity="left"
                        />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_candidate_pwd"
                        android:id="@+id/candidate_pwd"
                        android:gravity="left"
                        android:inputType="textPassword"
                        />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_candidate_cnfpwd"
                        android:id="@+id/candidate_cnfpwd"
                        android:gravity="left"
                        android:inputType="textPassword"
                        />

                    <Spinner
                        android:id="@+id/candidate_qualification"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/hint_candidate_contactno"
                        android:id="@+id/candidate_contactno"
                        android:gravity="left"
                        />

                    <Button
                        android:id="@+id/candidate_sign_up"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/signup_button"
                        android:textSize="14sp"
                        android:textColor="@color/text_dark"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button_boarder"
                        />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>
