<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_primary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_position"
                android:id="@+id/position"
                android:gravity="start"
                android:inputType="textPersonName"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:id="@+id/description"
                android:gravity="start"
                android:inputType="text"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_zipcode"
                android:id="@+id/zipcode"
                android:gravity="start"
                android:inputType="number"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_state"
                android:id="@+id/state"
                android:gravity="start"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_city"
                android:id="@+id/city"
                android:gravity="start"
                />

            <Spinner
                android:id="@+id/category"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />
            <Spinner
                android:id="@+id/required_skills"
                android:layout_width="300dp"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/education_qualification"
                android:layout_width="300dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Job Type"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text"
                        android:id="@+id/radioJobTypeGroup"
                        android:checkedButton="@+id/permanent" >

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/permanent"
                            android:text="@string/hint_permanent"
                            android:onClick="onRadioButtonClicked"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/temporary"
                            android:text="@string/hint_temporary"
                            android:onClick="onRadioButtonClicked"/>

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Job End Time"/>
                <!--<LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text"
                        android:id="@+id/radioJobEndTimeGroup"
                        android:checkedButton="@+id/hours_12" >
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/hours_12"
                            android:text="@string/hint_hours_12"
                            android:onClick="onRadioButtonClicked"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/hours_24"
                            android:text="@string/hint_hours_24"
                            android:onClick="onRadioButtonClicked"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/hours_48"
                            android:text="@string/hint_hours_48"
                            android:onClick="onRadioButtonClicked"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/hours_72"
                            android:text="@string/hint_hours_72"
                            android:onClick="onRadioButtonClicked"/>
                    </RadioGroup>
                </LinearLayout>-->
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_create_job"
                android:id="@+id/create_job"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
