<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/designation_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:hint="@string/hint_candidate_designation"
            android:text=""
            android:id="@+id/positionname"
            android:textColor="@color/text_dark"
            android:textSize="30sp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/jobdesc_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin = "5dip"
            android:hint="@string/hint_description"
            android:text=""
            android:id="@+id/description"
            android:textColor="@color/text_dark"
            android:textSize="30sp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/location_icon1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin = "5dip"
            android:hint="@string/hint_city"
            android:text=""
            android:id="@+id/city"
            android:textColor="@color/text_dark"
            android:textSize="30sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin = "5dip"
            android:hint="@string/hint_state"
            android:text=""
            android:id="@+id/state"
            android:textColor="@color/text_dark"
            android:textSize="30sp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/category_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin = "5dip"
            android:hint="@string/hint_category"
            android:text=""
            android:id="@+id/category"
            android:textColor="@color/text_dark"
            android:textSize="30sp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/workingskill_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin = "5dip"
            android:hint="@string/hint_candidate_skill"
            android:text=""
            android:id="@+id/requiredskills"
            android:textColor="@color/text_dark"
            android:textSize="30sp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/education_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin = "5dip"
            android:hint="@string/hint_qualification"
            android:text=""
            android:id="@+id/qualification"
            android:textColor="@color/text_dark"
            android:textSize="30sp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/contract_job_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin = "5dip"
            android:hint="@string/hint_temporary"
            android:text=""
            android:id="@+id/jobtype"
            android:textColor="@color/text_dark"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <View
            android:layout_width="20dp"
            android:layout_height="10dp" />
        <Button
            android:id="@+id/ok_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="ok"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:background="@color/app_primary"
            />
        <View
            android:layout_width="20dp"
            android:layout_height="10dp" />
        <Button
            android:id="@+id/accept_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Accept"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:background="@color/app_primary"
            />
        <View
            android:layout_width="20dp"
            android:layout_height="10dp" />
        <Button
            android:id="@+id/reject_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Reject"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:background="@color/deep_orange"
            />
        <View
            android:layout_width="20dp"
            android:layout_height="10dp" />
    </LinearLayout>
</LinearLayout>
